# solana-hello-world

./: Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
frontend/: call-hello.ts  get-tx-logs.ts  solanaInteraction.ts
programs/solana-hello-world/: Cargo.toml  solana_hello_world-keypair.json
programs/solana-hello-world/src/: lib.rs
scripts/: devnet-deploy.sh
solana_program/: Cargo.toml
tests/: solana-hello-world.ts
