[package]
name = "solana-hello-world"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"  # Correct edition

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_hello_world"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"  # Stable Anchor version, no changes needed here
